# 2004_Embedded_Systems

./: README.md
PicotoFlash/: CMakeLists.txt  crc32.h  display_functions.c  display_functions.h  erase.c  erase.h  flash_backup_restore.c  flash_backup_restore.h  hw_config.c  identification.c  identification.h  jedec_universal_backup.c  jedec_universal_backup.h  lwipopts.h  picotoflash.c  read.c  read.h  sd_functions.c  sd_functions.h  univ_restore_sd.c  univ_restore_sd.h  write.c  write.h
Project/: CMakeLists.txt  main_flash_forensic.c
Project/helper_functions/: CMakeLists.txt  display_functions.h  erase.h  identification.c  read.c  read.h  sd_functions.c  sd_functions.h
spi_microsd_revamped/: CMakeLists.txt  display_functions.c  display_functions.h  flowchart  main.c  sd_functions.c
